CDL. Testing